Fixed wrapping and line breaks in output display

--- a/style.css
+++ b/style.css
@@ -327,11 +327,11 @@ th.mem_mar {
     color: rgb(31, 0, 0);
     background-color: rgba(0, 0, 0, 0);
 
-    word-wrap: break-word;
+    word-break: break-all;
+    white-space: pre-line;
+
     overflow-y: scroll;
     overflow-x: hidden;
-
-    /* user-select: text; */
 
     visibility: visible;
 }
